Modifica links de sidebar

--- a/index.html
+++ b/index.html
@@ -29,33 +29,25 @@
         <aside class="sidebar">
           <h3>Métodos</h3>
           <ul>
-            <li class="sidebar-item"><a href="functions/_forEach.html" target="_blank" rel="noopener noreferrer">_forEach</a></li>
-            <li class="sidebar-item"><a href="functions/_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
-            <li class="sidebar-item"><a href="functions/_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-            <li class="sidebar-item"><a href="functions/_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-            <li class="sidebar-item"><a href="functions/_includes" target="_blank" rel="noopener noreferrer">_includes</a></li>
-            <li class="sidebar-item"><a href="functions/_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
-            <li class="sidebar-item"><a href="functions/_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
-            <li class="sidebar-item"><a href="functions/_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-            <li class="sidebar-item"><a href="functions/_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item">
-              <a href="functions/_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
-            </li>
-            <li class="sidebar-item">
-              <a href="functions/_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a>
-            </li>
-            <li class="sidebar-item"><a href="functions/_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
-            <li class="sidebar-item"><a href="functions/_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
-            <li class="sidebar-item"><a href="functions/_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
-            <li class="sidebar-item"><a href="functions/_max.html" target="_blank" rel="noopener noreferrer">_max</a></li>
-            <li class="sidebar-item">
-              <a href="functions/_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a>
-            </li>
-            <li class="sidebar-item">
-              <a href="functions/_lastIndexOf.html" target="_blank" rel="noopener noreferrer">_lastIndexOf</a>
-            </li>
-            <li class="sidebar-item"><a href="functions/_concat.html" target="_blank" rel="noopener noreferrer">_concat</a></li>
-            <li class="sidebar-item"><a href="functions/_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
+            <li class="sidebar-item"><a href="functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
+            <li class="sidebar-item"><a href="functions/some.html" rel="noopener noreferrer">_some</a></li>
+            <li class="sidebar-item"><a href="functions/every.html" rel="noopener noreferrer">_every</a></li>
+            <li class="sidebar-item"><a href="functions/find.html" rel="noopener noreferrer">_find</a></li>
+            <li class="sidebar-item"><a href="functions/includes" rel="noopener noreferrer">_includes</a></li>
+            <li class="sidebar-item"><a href="functions/map.html" rel="noopener noreferrer">_map</a></li>
+            <li class="sidebar-item"><a href="functions/filter.html" rel="noopener noreferrer">_filter</a></li>
+            <li class="sidebar-item"><a href="functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
+            <li class="sidebar-item"><a href="functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
+            <li class="sidebar-item"><a href="functions/indexOfRecursive.html" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
+            <li class="sidebar-item"><a href="functions/union.html" rel="noopener noreferrer">_union</a></li>
+            <li class="sidebar-item"><a href="functions/sum.html" rel="noopener noreferrer">_sum</a></li>
+            <li class="sidebar-item"><a href="functions/min.html" rel="noopener noreferrer">_min</a></li>
+            <li class="sidebar-item"><a href="functions/max.html" rel="noopener noreferrer">_max</a></li>
+            <li class="sidebar-item"><a href="functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
+            <li class="sidebar-item"><a href="functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="functions/concat.html" rel="noopener noreferrer">_concat</a></li>
+            <li class="sidebar-item"><a href="functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
           </ul>
         </aside>
         <section class="content">
