--- a/functions/sum.html
+++ b/functions/sum.html
@@ -45,24 +45,24 @@
         <aside class="sidebar" id="others">
           <h3>Métodos</h3>
           <ul>
-            <li class="sidebar-item"><a href="_forEach.html" target="_blank" rel="noopener noreferrer">_forEach</a></li>
-            <li class="sidebar-item"><a href="_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
-            <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-            <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-            <li class="sidebar-item"><a href="_includes.html" target="_blank" rel="noopener noreferrer">_includes</a></li>
-            <li class="sidebar-item"><a href="_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
-            <li class="sidebar-item"><a href="_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
-            <li class="sidebar-item"><a href="_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-            <li class="sidebar-item"><a href="_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item"><a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
-            <li class="sidebar-item"><a href="_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
-            <li class="sidebar-item"><a href="_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
-            <li class="sidebar-item"><a href="_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
-            <li class="sidebar-item"><a href="_max.html" target="_blank" rel="noopener noreferrer">_max</a></li>
-            <li class="sidebar-item"><a href="_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
-            <li class="sidebar-item"><a href="_lastIndexOf.html" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
-            <li class="sidebar-item"><a href="_concat.html" target="_blank" rel="noopener noreferrer">_concat</a></li>
-            <li class="sidebar-item"><a href="_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
+            <li class="sidebar-item"><a href="functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
+            <li class="sidebar-item"><a href="functions/some.html" rel="noopener noreferrer">_some</a></li>
+            <li class="sidebar-item"><a href="functions/every.html" rel="noopener noreferrer">_every</a></li>
+            <li class="sidebar-item"><a href="functions/find.html" rel="noopener noreferrer">_find</a></li>
+            <li class="sidebar-item"><a href="functions/includes" rel="noopener noreferrer">_includes</a></li>
+            <li class="sidebar-item"><a href="functions/map.html" rel="noopener noreferrer">_map</a></li>
+            <li class="sidebar-item"><a href="functions/filter.html" rel="noopener noreferrer">_filter</a></li>
+            <li class="sidebar-item"><a href="functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
+            <li class="sidebar-item"><a href="functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
+            <li class="sidebar-item"><a href="functions/indexOfRecursive.html" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
+            <li class="sidebar-item"><a href="functions/union.html" rel="noopener noreferrer">_union</a></li>
+            <li class="sidebar-item"><a href="functions/min.html" rel="noopener noreferrer">_min</a></li>
+            <li class="sidebar-item"><a href="functions/max.html" rel="noopener noreferrer">_max</a></li>
+            <li class="sidebar-item"><a href="functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
+            <li class="sidebar-item"><a href="functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="functions/concat.html" rel="noopener noreferrer">_concat</a></li>
+            <li class="sidebar-item"><a href="functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
           </ul>
         </aside>
         <section class="content">
