--- a/functions/_indexOf.html
+++ b/functions/_indexOf.html
@@ -53,7 +53,9 @@
             <li class="sidebar-item"><a href="_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
             <li class="sidebar-item"><a href="_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
             <li class="sidebar-item"><a href="_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-            <li class="sidebar-item"><a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item">
+              <a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
+            </li>
             <li class="sidebar-item"><a href="_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
             <li class="sidebar-item"><a href="_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
             <li class="sidebar-item"><a href="_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
@@ -67,10 +69,12 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_indexOf()</code> devuelve el primer índice en el que se puede encontrar un elemento dado en el array, o devuelve <code>-1</code> si el elemento no está presente.
+            <p>
+              El método <code>_indexOf()</code> devuelve el primer índice en el que se puede encontrar un elemento dado en el
+              array, o devuelve <code>-1</code> si el elemento no está presente.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_indexOfRecursive(<em>array</em>, <em>element</em>)</p>
+            <p class="syntaxbox">_indexOf(<em>array</em>, <em>element</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
@@ -88,7 +92,8 @@
             </dl>
             <h3>Valor de retorno</h3>
             <p class="description">
-              Se devuelve un número, correspondiente al primer índice del array en el que se encuentra el elemento, o -1 si el elemento no está presente.
+              Se devuelve un número, correspondiente al primer índice del array en el que se encuentra el elemento, o -1 si el
+              elemento no está presente.
             </p>
           </article>
           <article id="examples">
