--- a/functions/_concat.html
+++ b/functions/_concat.html
@@ -54,7 +54,9 @@
             <li class="sidebar-item"><a href="_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
             <li class="sidebar-item"><a href="_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
             <li class="sidebar-item"><a href="_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item"><a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item">
+              <a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
+            </li>
             <li class="sidebar-item"><a href="_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
             <li class="sidebar-item"><a href="_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
             <li class="sidebar-item"><a href="_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
@@ -67,10 +69,12 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_concat()</code> se usa para unir dos o más arrays. Este método no cambia los arrays existentes, sino que
-            devuelve un nuevo array.</p>
+            <p>
+              El método <code>_concat()</code> se usa para unir dos o más arrays. Este método no cambia los arrays existentes,
+              sino que devuelve un nuevo array.
+            </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_concat(<em>arrays1</em>, <em>array2</em>, <em>arrayN</em>)</p>
+            <p class="syntaxbox">_concat(<em>arrays1</em>, <em>array2</em>, <em>...arrayN</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
