Corrige nombre del método en sintaxis

--- a/functions/_findIndex.html
+++ b/functions/_findIndex.html
@@ -54,7 +54,9 @@
             <li class="sidebar-item"><a href="_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
             <li class="sidebar-item"><a href="_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
             <li class="sidebar-item"><a href="_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item"><a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item">
+              <a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
+            </li>
             <li class="sidebar-item"><a href="_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
             <li class="sidebar-item"><a href="_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
             <li class="sidebar-item"><a href="_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
@@ -67,11 +69,12 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_findIndex()</code> devuelve el primer índice del primer elemento de un array que cumpla con la
-          función de prueba proporcionada. En caso contrario devuelve <code>-1</code>.
+            <p>
+              El método <code>_findIndex()</code> devuelve el primer índice del primer elemento de un array que cumpla con la
+              función de prueba proporcionada. En caso contrario devuelve <code>-1</code>.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_includes(<em>array</em>, <em>callback</em>)</p>
+            <p class="syntaxbox">_findIndex(<em>array</em>, <em>callback</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
@@ -89,8 +92,8 @@
             </dl>
             <h3>Valor de retorno</h3>
             <p class="description">
-              Devuelve el índice del primer elemento que cumpla con la función, o <code>-1</code> en caso de que ningún elemento la
-            cumpla.
+              Devuelve el índice del primer elemento que cumpla con la función, o <code>-1</code> en caso de que ningún elemento
+              la cumpla.
             </p>
           </article>
           <article id="examples">
