Agrega tres puntos en sintaxis

--- a/functions/concat.html
+++ b/functions/concat.html
@@ -67,10 +67,12 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_concat()</code> se usa para unir dos o más arrays. Este método no cambia los arrays existentes, sino que
-            devuelve un nuevo array.</p>
+            <p>
+              El método <code>_concat()</code> se usa para unir dos o más arrays. Este método no cambia los arrays existentes, sino que
+              devuelve un nuevo array.
+            </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_concat(<em>arrays1</em>, <em>array2</em>, <em>arrayN</em>)</p>
+            <p class="syntaxbox">_concat(<em>arrays1</em>, <em>array2</em>, <em>...arrayN</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
