Corrige nombre del método en sintaxis

--- a/functions/findIndex.html
+++ b/functions/findIndex.html
@@ -67,11 +67,12 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_findIndex()</code> devuelve el primer índice del primer elemento de un array que cumpla con la
-          función de prueba proporcionada. En caso contrario devuelve <code>-1</code>.
+            <p>
+              El método <code>_findIndex()</code> devuelve el primer índice del primer elemento de un array que cumpla con la función
+              de prueba proporcionada. En caso contrario devuelve <code>-1</code>.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_includes(<em>array</em>, <em>callback</em>)</p>
+            <p class="syntaxbox">_findIndex(<em>array</em>, <em>callback</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
@@ -90,7 +91,7 @@
             <h3>Valor de retorno</h3>
             <p class="description">
               Devuelve el índice del primer elemento que cumpla con la función, o <code>-1</code> en caso de que ningún elemento la
-            cumpla.
+              cumpla.
             </p>
           </article>
           <article id="examples">
