--- a/functions/min.html
+++ b/functions/min.html
@@ -45,30 +45,32 @@
         <aside class="sidebar" id="others">
           <h3>Métodos</h3>
           <ul>
-            <li class="sidebar-item"><a href="functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
-            <li class="sidebar-item"><a href="functions/some.html" rel="noopener noreferrer">_some</a></li>
-            <li class="sidebar-item"><a href="functions/every.html" rel="noopener noreferrer">_every</a></li>
-            <li class="sidebar-item"><a href="functions/find.html" rel="noopener noreferrer">_find</a></li>
-            <li class="sidebar-item"><a href="functions/includes" rel="noopener noreferrer">_includes</a></li>
-            <li class="sidebar-item"><a href="functions/map.html" rel="noopener noreferrer">_map</a></li>
-            <li class="sidebar-item"><a href="functions/filter.html" rel="noopener noreferrer">_filter</a></li>
-            <li class="sidebar-item"><a href="functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
-            <li class="sidebar-item"><a href="functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item"><a href="functions/indexOfRecursive.html" rel="noopener noreferrer">_indexOfRecursive</a></li>
-            <li class="sidebar-item"><a href="functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
-            <li class="sidebar-item"><a href="functions/union.html" rel="noopener noreferrer">_union</a></li>
-            <li class="sidebar-item"><a href="functions/sum.html" rel="noopener noreferrer">_sum</a></li>
-            <li class="sidebar-item"><a href="functions/max.html" rel="noopener noreferrer">_max</a></li>
-            <li class="sidebar-item"><a href="functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
-            <li class="sidebar-item"><a href="functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
-            <li class="sidebar-item"><a href="functions/concat.html" rel="noopener noreferrer">_concat</a></li>
-            <li class="sidebar-item"><a href="functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
+            <li class="sidebar-item"><a href="../functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
+            <li class="sidebar-item"><a href="../functions/some.html" rel="noopener noreferrer">_some</a></li>
+            <li class="sidebar-item"><a href="../functions/every.html" rel="noopener noreferrer">_every</a></li>
+            <li class="sidebar-item"><a href="../functions/find.html" rel="noopener noreferrer">_find</a></li>
+            <li class="sidebar-item"><a href="../functions/includes" rel="noopener noreferrer">_includes</a></li>
+            <li class="sidebar-item"><a href="../functions/map.html" rel="noopener noreferrer">_map</a></li>
+            <li class="sidebar-item"><a href="../functions/filter.html" rel="noopener noreferrer">_filter</a></li>
+            <li class="sidebar-item"><a href="../functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
+            <li class="sidebar-item"><a href="../functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
+            <li class="sidebar-item"><a href="../functions/indexOfRecursive.html" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="../functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
+            <li class="sidebar-item"><a href="../functions/union.html" rel="noopener noreferrer">_union</a></li>
+            <li class="sidebar-item"><a href="../functions/sum.html" rel="noopener noreferrer">_sum</a></li>
+            <li class="sidebar-item"><a href="../functions/max.html" rel="noopener noreferrer">_max</a></li>
+            <li class="sidebar-item"><a href="../functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
+            <li class="sidebar-item"><a href="../functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="../functions/concat.html" rel="noopener noreferrer">_concat</a></li>
+            <li class="sidebar-item"><a href="../functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
           </ul>
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_min()</code>devuelve el valor mínimo de un array. Los elementos del array pueden ser
-            <code>number</code> o <code>string</code>.</p>
+            <p>
+              El método <code>_min()</code>devuelve el valor mínimo de un array. Los elementos del array pueden ser
+              <code>number</code> o <code>string</code>.
+            </p>
             <h3>Sintaxis</h3>
             <p class="syntaxbox">_min(<em>array</em>)</p>
             <h3>Parámetros</h3>
@@ -77,7 +79,7 @@
                 <code class="code-params">array</code>
               </dt>
               <dd class="description">
-              El array de cuyos elementos se devolverá el mínimo.
+                El array de cuyos elementos se devolverá el mínimo.
               </dd>
             </dl>
             <h3>Valor de retorno</h3>
