--- a/functions/indexOfRecursive.html
+++ b/functions/indexOfRecursive.html
@@ -45,29 +45,31 @@
         <aside class="sidebar" id="others">
           <h3>Métodos</h3>
           <ul>
-            <li class="sidebar-item"><a href="functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
-            <li class="sidebar-item"><a href="functions/some.html" rel="noopener noreferrer">_some</a></li>
-            <li class="sidebar-item"><a href="functions/every.html" rel="noopener noreferrer">_every</a></li>
-            <li class="sidebar-item"><a href="functions/find.html" rel="noopener noreferrer">_find</a></li>
-            <li class="sidebar-item"><a href="functions/includes" rel="noopener noreferrer">_includes</a></li>
-            <li class="sidebar-item"><a href="functions/map.html" rel="noopener noreferrer">_map</a></li>
-            <li class="sidebar-item"><a href="functions/filter.html" rel="noopener noreferrer">_filter</a></li>
-            <li class="sidebar-item"><a href="functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
-            <li class="sidebar-item"><a href="functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item"><a href="functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
-            <li class="sidebar-item"><a href="functions/union.html" rel="noopener noreferrer">_union</a></li>
-            <li class="sidebar-item"><a href="functions/sum.html" rel="noopener noreferrer">_sum</a></li>
-            <li class="sidebar-item"><a href="functions/min.html" rel="noopener noreferrer">_min</a></li>
-            <li class="sidebar-item"><a href="functions/max.html" rel="noopener noreferrer">_max</a></li>
-            <li class="sidebar-item"><a href="functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
-            <li class="sidebar-item"><a href="functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
-            <li class="sidebar-item"><a href="functions/concat.html" rel="noopener noreferrer">_concat</a></li>
-            <li class="sidebar-item"><a href="functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
+            <li class="sidebar-item"><a href="../functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
+            <li class="sidebar-item"><a href="../functions/some.html" rel="noopener noreferrer">_some</a></li>
+            <li class="sidebar-item"><a href="../functions/every.html" rel="noopener noreferrer">_every</a></li>
+            <li class="sidebar-item"><a href="../functions/find.html" rel="noopener noreferrer">_find</a></li>
+            <li class="sidebar-item"><a href="../functions/includes" rel="noopener noreferrer">_includes</a></li>
+            <li class="sidebar-item"><a href="../functions/map.html" rel="noopener noreferrer">_map</a></li>
+            <li class="sidebar-item"><a href="../functions/filter.html" rel="noopener noreferrer">_filter</a></li>
+            <li class="sidebar-item"><a href="../functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
+            <li class="sidebar-item"><a href="../functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
+            <li class="sidebar-item"><a href="../functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
+            <li class="sidebar-item"><a href="../functions/union.html" rel="noopener noreferrer">_union</a></li>
+            <li class="sidebar-item"><a href="../functions/sum.html" rel="noopener noreferrer">_sum</a></li>
+            <li class="sidebar-item"><a href="../functions/min.html" rel="noopener noreferrer">_min</a></li>
+            <li class="sidebar-item"><a href="../functions/max.html" rel="noopener noreferrer">_max</a></li>
+            <li class="sidebar-item"><a href="../functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
+            <li class="sidebar-item"><a href="../functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="../functions/concat.html" rel="noopener noreferrer">_concat</a></li>
+            <li class="sidebar-item"><a href="../functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
           </ul>
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_indexOfRecursive()</code> devuelve el primer índice en el que se puede encontrar un elemento dado en el array, o devuelve <code>-1</code> si el elemento no está presente. Además, es implementado utilizando recursividad.
+            <p>
+              El método <code>_indexOfRecursive()</code> devuelve el primer índice en el que se puede encontrar un elemento dado en el
+              array, o devuelve <code>-1</code> si el elemento no está presente. Además, es implementado utilizando recursividad.
             </p>
             <h3>Sintaxis</h3>
             <p class="syntaxbox">_indexOfRecursive(<em>array</em>, <em>element</em>)</p>
@@ -88,7 +90,8 @@
             </dl>
             <h3>Valor de retorno</h3>
             <p class="description">
-              Se devuelve un número, correspondiente al primer índice del array en el que se encuentra el elemento, o -1 si el elemento no está presente.
+              Se devuelve un número, correspondiente al primer índice del array en el que se encuentra el elemento, o -1 si el elemento
+              no está presente.
             </p>
           </article>
           <article id="examples">
