--- a/functions/union.html
+++ b/functions/union.html
@@ -45,29 +45,33 @@
         <aside class="sidebar" id="others">
           <h3>Métodos</h3>
           <ul>
-            <li class="sidebar-item"><a href="functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
-            <li class="sidebar-item"><a href="functions/some.html" rel="noopener noreferrer">_some</a></li>
-            <li class="sidebar-item"><a href="functions/every.html" rel="noopener noreferrer">_every</a></li>
-            <li class="sidebar-item"><a href="functions/find.html" rel="noopener noreferrer">_find</a></li>
-            <li class="sidebar-item"><a href="functions/includes" rel="noopener noreferrer">_includes</a></li>
-            <li class="sidebar-item"><a href="functions/map.html" rel="noopener noreferrer">_map</a></li>
-            <li class="sidebar-item"><a href="functions/filter.html" rel="noopener noreferrer">_filter</a></li>
-            <li class="sidebar-item"><a href="functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
-            <li class="sidebar-item"><a href="functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item"><a href="functions/indexOfRecursive.html" rel="noopener noreferrer">_indexOfRecursive</a></li>
-            <li class="sidebar-item"><a href="functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
-            <li class="sidebar-item"><a href="functions/sum.html" rel="noopener noreferrer">_sum</a></li>
-            <li class="sidebar-item"><a href="functions/min.html" rel="noopener noreferrer">_min</a></li>
-            <li class="sidebar-item"><a href="functions/max.html" rel="noopener noreferrer">_max</a></li>
-            <li class="sidebar-item"><a href="functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
-            <li class="sidebar-item"><a href="functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
-            <li class="sidebar-item"><a href="functions/concat.html" rel="noopener noreferrer">_concat</a></li>
-            <li class="sidebar-item"><a href="functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
+            <li class="sidebar-item"><a href="../functions/forEach.html" rel="noopener noreferrer">_forEach</a></li>
+            <li class="sidebar-item"><a href="../functions/some.html" rel="noopener noreferrer">_some</a></li>
+            <li class="sidebar-item"><a href="../functions/every.html" rel="noopener noreferrer">_every</a></li>
+            <li class="sidebar-item"><a href="../functions/find.html" rel="noopener noreferrer">_find</a></li>
+            <li class="sidebar-item"><a href="../functions/includes" rel="noopener noreferrer">_includes</a></li>
+            <li class="sidebar-item"><a href="../functions/map.html" rel="noopener noreferrer">_map</a></li>
+            <li class="sidebar-item"><a href="../functions/filter.html" rel="noopener noreferrer">_filter</a></li>
+            <li class="sidebar-item"><a href="../functions/reduce.html" rel="noopener noreferrer">_reduce</a></li>
+            <li class="sidebar-item"><a href="../functions/indexOf.html" rel="noopener noreferrer">_indexOf</a></li>
+            <li class="sidebar-item"><a href="../functions/indexOfRecursive.html" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="../functions/intersection.html" rel="noopener noreferrer">_intersection</a></li>
+            <li class="sidebar-item"><a href="../functions/sum.html" rel="noopener noreferrer">_sum</a></li>
+            <li class="sidebar-item"><a href="../functions/min.html" rel="noopener noreferrer">_min</a></li>
+            <li class="sidebar-item"><a href="../functions/max.html" rel="noopener noreferrer">_max</a></li>
+            <li class="sidebar-item"><a href="../functions/findIndex.html" rel="noopener noreferrer">_findIndex</a></li>
+            <li class="sidebar-item"><a href="../functions/lastIndexOf.html" rel="noopener noreferrer">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="../functions/concat.html" rel="noopener noreferrer">_concat</a></li>
+            <li class="sidebar-item"><a href="../functions/isEqual.html" rel="noopener noreferrer">_isEqual</a></li>
           </ul>
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>A patir de dos arrays, el método <code>_union()</code> retorna un nuevo array con la unión de los valores de ambos, sin repeticiones y preservando el orden de los elementos, comenzando desde el primer elemento del primer array pasado por parámetro.</p>
+            <p>
+              A patir de dos arrays, el método <code>_union()</code> retorna un nuevo array con la unión de los valores de ambos, sin
+              repeticiones y preservando el orden de los elementos, comenzando desde el primer elemento del primer array pasado por
+              parámetro.
+            </p>
             <h3>Sintaxis</h3>
             <p class="syntaxbox">_union(<em>arrayOne</em>, <em>arrayTwo</em>)</p>
             <h3>Parámetros</h3>
