Corrige cursiva en sintaxis

--- a/functions/concat.html
+++ b/functions/concat.html
@@ -72,7 +72,7 @@
               devuelve un nuevo array.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">array1._concat(<em>arrays2</em>, <em>array3</em>, <em>...arrayN</em>)</p>
+            <p class="syntaxbox"><em>array1</em>._concat(<em>arrays2</em>, <em>array3</em>, <em>...arrayN</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
