Adapta textos para el uso del método

--- a/functions/indexOf.html
+++ b/functions/indexOf.html
@@ -72,15 +72,9 @@
               devuelve <code>-1</code> si el elemento no está presente.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_indexOf(<em>array</em>, <em>element</em>)</p>
+            <p class="syntaxbox"><em>array</em>._indexOf(<em>element</em>)</p>
             <h3>Parámetros</h3>
             <dl>
-              <dt>
-                <code class="code-params">array</code>
-              </dt>
-              <dd class="description">
-                El array en el que se buscará el elemento.
-              </dd>
               <dt>
                 <code class="code-params">element</code>
               </dt>
@@ -101,7 +95,7 @@
               <code class="javascript">
 let array = [2, 9, 9];
 
-_indexOf(array, 2));
+array._indexOf(2);
 
 >> 0
               </code>
