Adapta textos para el uso del método

--- a/functions/max.html
+++ b/functions/max.html
@@ -72,16 +72,7 @@
               <code>number</code> o <code>string</code>.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_max(<em>array</em>)</p>
-            <h3>Parámetros</h3>
-            <dl>
-              <dt>
-                <code class="code-params">array</code>
-              </dt>
-              <dd class="description">
-                El array de cuyos elementos se devolverá el máximo.
-              </dd>
-            </dl>
+            <p class="syntaxbox"><em>array</em>._max()</p>
             <h3>Valor de retorno</h3>
             <p class="description">
               Devuelve un <code>number</code> o un <code>string</code>, o <code>undefined</code> en caso de que el array esté vacío.
@@ -94,7 +85,7 @@
             <code class="javascript">
 const lista = ['a', '1', 'j'];
 
-_max(lista);
+lista._max();
 
 >>> j            
             </code>
