Adapta textos para el uso del método

--- a/functions/min.html
+++ b/functions/min.html
@@ -72,16 +72,7 @@
               <code>number</code> o <code>string</code>.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_min(<em>array</em>)</p>
-            <h3>Parámetros</h3>
-            <dl>
-              <dt>
-                <code class="code-params">array</code>
-              </dt>
-              <dd class="description">
-                El array de cuyos elementos se devolverá el mínimo.
-              </dd>
-            </dl>
+            <p class="syntaxbox"><em>array</em>._min()</p>
             <h3>Valor de retorno</h3>
             <p class="description">
               Devuelve un <code>number</code> o un <code>string</code>, o <code>undefined</code> en caso de que el array esté vacío.
@@ -94,7 +85,7 @@
             <code class="javascript">
 const numeros= [1, 4, 9, 88, -44, 109, 8];
 
-_min(numeros);
+numeros._min();
                           
 >> -44            
             </code>
