--- a/functions/reduce.html
+++ b/functions/reduce.html
@@ -72,15 +72,9 @@
               para reducirlo a un único valor.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_reduce(<em>array</em>, <em>callback</em> [,<em>initialValue</em>])</p>
+            <p class="syntaxbox"><em>array</em>._reduce(<em>callback</em> [,<em>initialValue</em>])</p>
             <h3>Parámetros</h3>
             <dl>
-              <dt>
-                <code class="code-params">array</code>
-              </dt>
-              <dd class="description">
-                El array que quiere reducirse a un valor aplicándole una función a sus elementos.
-              </dd>
               <dt>
                 <code class="code-params">callback</code>
               </dt>
@@ -106,7 +100,7 @@ let listOfNumbers = [5, 6, 2, 3];
 
 const multiply = (x, y) => x * y;
             
-_reduce(listOfNumbers, multiply);
+listOfNumbers._reduce(multiply);
             
 >> 180      
               </code>
